syntax = "proto3";

option java_package = "com.anshtya.core.local.proto";
option java_multiple_files = true;

message AccountDetailsProto {
  int64 id = 1;
  string name = 2;
  string username = 3;
  string gravatar = 4;
  string avatar = 5;
  bool includeAdult = 6;
}