syntax = "proto3";

option java_package = "com.anshtya.movieinfo.core.local.proto";
option java_multiple_files = true;

enum DarkMode {
  DARK_MODE_SYSTEM = 0;
  DARK_MODE_DARK = 1;
  DARK_MODE_LIGHT = 2;
}