syntax = "proto3";

import "dark_mode.proto";
import "account_details.proto";

option java_package = "com.anshtya.core.local.proto";
option java_multiple_files = true;

message UserPreferences {
  bool useDynamicColor = 1;
  DarkMode darkMode = 2;
  bool includeAdultResults = 3;

  AccountDetailsProto accountDetails = 7;

  // Next available number - 8
}